--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -19,7 +19,7 @@
       aria-hidden="false"
       aria-controls="search-form"
     >
-      <span class="material-icons-outlined">search</span>
+      <span class="material-symbols-outlined">search</span>
     </button>
 
     <form class="search-form" id="search-form" aria-hidden="true">
@@ -27,7 +27,7 @@
     </form>
 
     <button class="icon-btn" type="button" id="shopping-cart">
-      <span class="material-icons-outlined">shopping_cart</span>
+      <span class="material-symbols-outlined">shopping_cart</span>
     </button>
   </div>
 </header>
