--- a/frontend/partials/footer.html
+++ b/frontend/partials/footer.html
@@ -9,10 +9,10 @@
       </p>
 
       <!-- <div class="socials"> -->
-      <!--   <a href="#"><span class="material-icons-outlined">facebook</span></a> -->
-      <!--   <a href="#"><span class="material-icons-outlined">twitter</span></a> -->
-      <!--   <a href="#"><span class="material-icons-outlined">instagram</span></a> -->
-      <!--   <a href="#"><span class="material-icons-outlined">linkedin</span></a> -->
+      <!--   <a href="#"><span class="material-symbols-outlined">facebook</span></a> -->
+      <!--   <a href="#"><span class="material-symbols-outlined">twitter</span></a> -->
+      <!--   <a href="#"><span class="material-symbols-outlined">instagram</span></a> -->
+      <!--   <a href="#"><span class="material-symbols-outlined">linkedin</span></a> -->
       <!-- </div> -->
     </div>
 
@@ -30,13 +30,14 @@
       <h3>Contact Us</h3>
       <ul>
         <li>
-          <span class="material-icons-outlined">email</span>contact@webtech.dev
+          <span class="material-symbols-outlined">email</span
+          >contact@webtech.dev
         </li>
         <li>
-          <span class="material-icons-outlined">phone</span>+880-123-456-7890
+          <span class="material-symbols-outlined">phone</span>+880-123-456-7890
         </li>
         <li>
-          <span class="material-icons-outlined">location_on</span>
+          <span class="material-symbols-outlined">location_on</span>
           408/1, Kuratoli, Khilkhet, Dhaka 1229, Bangladesh
         </li>
       </ul>
