--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -152,7 +152,7 @@ main {
 
 @media (min-width: 768px) {
   main {
-    padding: 26px 100px;
+    padding: 50px 100px;
   }
 }
 
@@ -261,6 +261,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .hero {
   position: relative;
   overflow: hidden;
+  /* margin-top: 30px; */
   margin-bottom: 26px;
 }
 
@@ -531,6 +532,7 @@ input[type="search"]::-webkit-search-cancel-button {
   padding: 12px 16px;
   border: none;
   background: var(--mantle);
+  font-size: 15px;
 }
 
 .input-group input[type="email"]::placeholder {
@@ -546,6 +548,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: none;
   background: var(--blue);
   color: var(--base);
+  font-size: 15px;
   font-weight: 600;
   cursor: pointer;
   transition: background 0.2s ease;
@@ -564,7 +567,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 footer {
-  margin-top: 80px;
+  margin-top: 40px;
   padding: 26px 80px;
   border-top: 1px solid var(--surface0);
   background-color: var(--mantle);
