--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -145,8 +145,26 @@ header {
   }
 }
 
+@media (max-width: 768px) {
+  header.search-active nav {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  nav a:nth-child(4) {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  nav a:nth-child(3) {
+    display: none;
+  }
+}
+
 main {
-  padding: 24px;
+  padding: 32px 20px;
   flex: 1;
 }
 
@@ -243,12 +261,15 @@ a[aria-current="page"] {
 }
 
 .search-form {
+  position: absolute;
+  right: 40px;
   display: none;
   align-items: center;
   background-color: var(--crust);
   border: 1px solid var(--surface0);
   border-radius: 20px;
   padding: 2px 10px;
+  z-index: 10;
 }
 
 .search-form .material-symbols-outlined {
